<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/number1"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="38dp" />

    <EditText
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:ems="10"
        android:hint="@string/number2"
        android:inputType="numberDecimal"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="106dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="167dp"
        android:text="@string/result"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="190dp" />

    <Button
        android:id="@+id/multiply"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="46dp"
        android:text="@string/multiply"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="382dp" />

    <Button
        android:id="@+id/divide"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/multiply"
        android:layout_alignTop="@+id/subtract"
        android:text="@string/divide"
        tools:layout_editor_absoluteX="56dp"
        tools:layout_editor_absoluteY="458dp" />

    <Button
        android:id="@+id/sum"
        android:layout_width="68dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="46dp"
        android:text="+" />

    <Button
        android:id="@+id/subtract"
        android:layout_width="69dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/sum"
        android:layout_marginBottom="149dp"
        android:text="-" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:text="Clear" />


</RelativeLayout>